--- a/app/globals.css
+++ b/app/globals.css
@@ -59,3 +59,14 @@ body {
   background: var(--background);
   font-family: 'Satoshi', Arial, sans-serif;
 }
+
+@media (max-width: 974px) {
+  .servicesInnerNotes{
+    justify-content: center;
+    align-items: center;
+  }
+}
+.servicesNote{
+  width: 400px;
+  justify-content: space-between;
+}
