--- a/app/globals.css
+++ b/app/globals.css
@@ -141,3 +141,28 @@ body {
     padding: 1rem;
   }
 }
+@media (max-width: 715px) {
+  .bottline{
+    padding-left: 1rem;
+    padding-right: 1rem;
+  }
+  .moreres{
+    width: 100%;
+  } 
+  .liners{
+    width: 100%;
+    justify-content: space-between;
+  }
+}
+@media (max-width: 900px) {
+  .hero-header{
+    padding: 2rem;
+  }
+  .inner-hero{
+    max-width: 100%;
+  }
+  .holders{
+    padding: 0 1rem;
+    gap: 0.4rem;
+  }
+}
